Bugfix with chain reaction of bombs Added overflow-y hidden to HTML to hide scroll bar

--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -35,6 +35,7 @@ $music-off: url("../assets/icons/sound_off_32x32.png");
 
 html {
   box-sizing: border-box;
+  overflow-y: hidden;
 }
 
 body {
